--- a/WADWolframAngular/src/app/entities/login.html
+++ b/WADWolframAngular/src/app/entities/login.html
@@ -16,7 +16,7 @@
 
                 <div class="row">
                     <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
-                        <form role="form" class="register-form" *ngIf="!loginService.isLogged">
+                        <form role="form" class="register-form">
                             <h2>¡Entra! <small>Participa de forma activa</small></h2>
                             <hr class="colorgraph">
 
