--- a/WADWolframAngular/src/app/entities/userDataPage.component.html
+++ b/WADWolframAngular/src/app/entities/userDataPage.component.html
@@ -17,17 +17,13 @@
                                otro elemento que se pueda ocultar al minimizar la barra -->
                                 <div class="collapse navbar-collapse navbar-ex1-collapse">
 
-                                    <ul class="nav navbar-nav col-lg-10">
-                                        <li  id="iteMyProyects"><a href="/userProjects"  id="myProyects">Mis proyectos</a></li>
-                                        <li id="iteMyMovements" ><a href="/userMovements"  id="myMovements">Mis movimientos</a></li>
-                                        <li id="iteMyDatas" class="active"><a href="/userData"  id="myDatas">Mis datos</a></li>
+                                   <ul class="nav navbar-nav col-lg-10">
+                                       <li  id="iteMyProyects"><a [routerLink]="['/userProjects']"  id="myProyects">Mis proyectos</a></li>
+                                        <li id="iteMyMovements" ><a [routerLink]="['/userMovements']" id="myMovements">Mis movimientos</a></li>
+                                        <li id="iteMyDatas" class="active"><a [routerLink]="['/userData']"  id="myDatas">Mis datos</a></li>
                                     </ul>
-                                    <form action="/user/close" method="post">
-                                        <input type="submit" class="btn btn-info col-lg-2" id="btn_sesion" value="Cerrar sesión" />
-                                       
-                                    </form>
-
-
+                                        <button  (onClick)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion" >Cerrar sesión </button>
+                                      
                                 </div>
                             </nav>
 
