--- a/WADWolframAngular/src/app/entities/userMovements.component.html
+++ b/WADWolframAngular/src/app/entities/userMovements.component.html
@@ -15,15 +15,15 @@
 
                                 <!-- Agrupar los enlaces de navegación, los formularios y cualquier
                                otro elemento que se pueda ocultar al minimizar la barra -->
-                                <div class="collapse navbar-collapse navbar-ex1-collapse">
+                                <div  class="collapse navbar-collapse navbar-ex1-collapse">
 
                                     <ul class="nav navbar-nav col-lg-10">
-                                        <li  id="iteMyProyects"><a href="/userProjects"  id="myProyects">Mis proyectos</a></li>
-                                        <li id="iteMyMovements" class="active"><a href="/userMovements"  id="myMovements">Mis movimientos</a></li>
-                                        <li id="iteMyDatas"><a href="/userData"  id="myDatas">Mis datos</a></li>
+                                       <li  id="iteMyProyects"><a [routerLink]="['/userProjects']"  id="myProyects">Mis proyectos</a></li>
+                                        <li id="iteMyMovements" class="active"><a [routerLink]="['/userMovements']" id="myMovements">Mis movimientos</a></li>
+                                        <li id="iteMyDatas"><a [routerLink]="['/userData']"  id="myDatas">Mis datos</a></li>
                                     </ul>
-                                    <form action="/user/close" method="post">
-                                        <input type="submit" class="btn btn-info col-lg-2" id="btn_sesion" value="Cerrar sesión" />
+                                    <form>
+                                        <input  (onClick)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion" value="Cerrar sesión" />
                                        
                                     </form>
 
