--- a/WADWolframAngular/src/app/public.component.html
+++ b/WADWolframAngular/src/app/public.component.html
@@ -30,6 +30,8 @@
                                     <a [routerLink] class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul [ngbCollapse]="showMenu" class="dropdown-menu">
                                         <li><a [routerLink]="['/register']" routerLinkActive="active">Únete</a></li>
+                                        <li><a [routerLink]="['/login']" routerLinkActive="active">Inicia sesión/Mi cuenta</a></li>
+                                 <!--        <li><a *ngIf="loginService.isLogged" [routerLink]="['/userData']" routerLinkActive="active" aria-hidden="false">Mi Cuenta</a></li>-->
                                         
                                     </ul>
                                 </li>
