--- a/WADWolframAngular/src/app/entities/userMovements.component.html
+++ b/WADWolframAngular/src/app/entities/userMovements.component.html
@@ -47,7 +47,7 @@
                                                 <tr *ngFor="let movimiento of movimientos">
                                                     <td><a href="#">{{movimiento.projectTitle}}</a></td>
                                                     <td>{{movimiento.money}}</td>
-                                                    <td><{{movimiento.date}}</td>
+                                                    <td>{{movimiento.date}}</td>
                                                 </tr>
                                             </tbody>
                                         </table>
