--- a/WADWolframAngular/src/app/entities/userDataPage.component.html
+++ b/WADWolframAngular/src/app/entities/userDataPage.component.html
@@ -40,7 +40,7 @@
                                         <div class="col-md-6">
                                             <div id="profilePhoto">
 
-                                                <img src="/imagen/{{id}}.jpg" id="profileIcon" class="img-responsive" />
+                                                <img src="/imagen/{{user.id}}.jpg" id="profileIcon" class="img-responsive" />
                                                 <div class="form-group">
                                                     <label for="exampleInputFile">Cambiar foto</label>
                                                     <input type="file" id="exampleInputFile" class="center-block" name="imagen">
@@ -57,7 +57,7 @@
                                                 </div>
                                                 <div>
                                                     <label for="exampleInputEmail1">Apellidos</label>
-                                                    <input readonly class="form-control" id="exampleInputEmail1" name="{{user.lastname}}" placeholder="lastname">
+                                                    <input readonly class="form-control" id="exampleInputEmail1" name="lastname" placeholder="{{user.lastname}}">
 
                                                 </div>
                                                 <div class="form-group">
