register and update admin

--- a/WADWolframAngular/src/app/component/admin/admin.component.html
+++ b/WADWolframAngular/src/app/component/admin/admin.component.html
@@ -91,7 +91,7 @@
 	<footer>
 		<div class="container ">
 
-			<div *ngIf="LoginService.isLogged" class="copy text-center ">
+			<div class="copy text-center ">
 				WAD Wolfram <a (onClick)="logOut()">Cerrar sesión</a>
 			</div>
 
