logout by the beast

--- a/WADWolframAngular/src/app/entities/userDataPage.component.html
+++ b/WADWolframAngular/src/app/entities/userDataPage.component.html
@@ -22,7 +22,7 @@
                                         <li id="iteMyMovements" ><a [routerLink]="['/userMovements']" id="myMovements">Mis movimientos</a></li>
                                         <li id="iteMyDatas" class="active"><a [routerLink]="['/userData']"  id="myDatas">Mis datos</a></li>
                                     </ul>
-                                        <button  (onClick)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion" >Cerrar sesión </button>
+                                        <button  (click)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion" >Cerrar sesión </button>
                                       
                                 </div>
                             </nav>
