--- a/WADWolframAngular/src/app/entities/userMovements.component.html
+++ b/WADWolframAngular/src/app/entities/userMovements.component.html
@@ -23,7 +23,7 @@
                                         <li id="iteMyDatas"><a [routerLink]="['/userData']"  id="myDatas">Mis datos</a></li>
                                     </ul>
                                     <form>
-                                        <input  (onClick)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion" value="Cerrar sesión" />
+                                        <input  (click)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion" value="Cerrar sesión" />
                                        
                                     </form>
 
