--- a/WADWolframAngular/src/app/component/admin/admin.component.html
+++ b/WADWolframAngular/src/app/component/admin/admin.component.html
@@ -62,11 +62,11 @@
 						<!-- Main menu -->
 						<li class="current"><a [routerLink]="['/admin']"><i
 								class="glyphicon glyphicon-home "></i> Inicio</a></li>
-						<li><a [routerLink]="['/admin/projects']"><i
+						<li><a [routerLink]="['/admin/projects']" routerLinkActive="active"><i
 								class="glyphicon glyphicon-pencil "></i> Añadir Proyecto</a></li>
-						<li><a [routerLink]="['/admin/donations']"><i
+						<li><a [routerLink]="['/admin/donations']" routerLinkActive="active"><i
 								class="glyphicon glyphicon-euro"></i> Donaciones</a></li>
-						<li><a [routerLink]="['/admin/blog']"><i
+						<li><a [routerLink]="['/admin/blog']" routerLinkActive="active"><i
 								class="glyphicon glyphicon-tasks "></i> Añadir Noticia</a></li>
 						<li class="dropdown"  (click)="showDrop('loginMenu')" >
 
