--- a/WADWolframAngular/src/app/entities/userProjects.component.html
+++ b/WADWolframAngular/src/app/entities/userProjects.component.html
@@ -23,7 +23,7 @@
                                         <li id="iteMyDatas"><a [routerLink]="['/userData']"  id="myDatas">Mis datos</a></li>
                                     </ul>
                                     
-                                        <button (onClick)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion">Cerrar sesión</button>
+                                        <button (click)="logOut()" type="button" class="btn btn-info col-lg-2" id="btn_sesion">Cerrar sesión</button>
 
 
                                 </div>
