--- a/WADWolframAngular/src/app/public.component.html
+++ b/WADWolframAngular/src/app/public.component.html
@@ -27,11 +27,11 @@
                                 <li><a [routerLink]="['/about']" routerLinkActive="active">Sobre sus desarrolladores</a></li>
                                 <li class="dropdown"  (click)="showDropdown('loginMenu')" >
 
-                                    <a [routerLink] class="dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" data-delay="0" data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
+                                    <a [routerLink]  data-close-others="false">Cuenta <i class="fa fa-angle-down"></i></a>
                                     <ul [ngbCollapse]="showMenu" class="dropdown-menu">
                                         <li><a [routerLink]="['/register']" routerLinkActive="active">Únete</a></li>
-                                        <li><a [routerLink]="['/login']" routerLinkActive="active">Inicia sesión/Mi cuenta</a></li>
-                                 <!--        <li><a *ngIf="loginService.isLogged" [routerLink]="['/userData']" routerLinkActive="active" aria-hidden="false">Mi Cuenta</a></li>-->
+                                        <li><a *ngIf= "noLogeado" [routerLink]="['/login']" routerLinkActive="active">Inicia sesión</a></li>
+                                       <li><a *ngIf="Logeado" [routerLink]="['/userProjects']" routerLinkActive="active">Mi Cuenta</a></li>
                                         
                                     </ul>
                                 </li>
