index news and logout admin

--- a/WADWolframAngular/src/app/entities/blog.html
+++ b/WADWolframAngular/src/app/entities/blog.html
@@ -20,9 +20,9 @@
                                 <li>
                                     <div class="post-image">
                                         <div class="post-heading">
-                                            <h3><a href="/singleNew">{{nnew.title}}</a></h3>
+                                            <h3><a href="/singleNew/{{nnew.id}}">{{nnew.title}}</a></h3>
                                         </div>
-                                  <a href="/singleNew"><img src="https://localhost:8443/image/{{nnew.id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
+                                  <a href="/singleNew/{{nnew.id}}"><img src="https://localhost:8443/image/{{nnew.id}}.jpg" alt="Foto de la noticia" class="img-responsive" /></a>
                                     </div>
                                     <div class="bottom-article">
                                         <ul class="meta-post">
