--- a/WADWolframAngular/src/app/entities/index.html
+++ b/WADWolframAngular/src/app/entities/index.html
@@ -53,6 +53,8 @@
                                     <ul class="recent">
 
                                         <li *ngFor="let blog of blogs">
+                                            <a href="/singleNew/{{blog.id}}"> <img src="https://localhost:8443/image/little{{blog.id}}.jpg" class="pull-left" alt="Foto de la noticia" /></a>
+                                            <h6><a href="/singleNew/{{blog.id}}">{{blog.title}}</a></h6>
                                         </li>
                                         
                                     </ul>
