trying projects and single new

--- a/WADWolframAngular/src/app/entities/index.html
+++ b/WADWolframAngular/src/app/entities/index.html
@@ -9,7 +9,7 @@
                             <ul class="slides">
                                
                                 <li *ngFor="let project of projects">
-                                    <img src="/files/{{project.id}}.jpg" alt="Foto del proyecto" />
+                                    <img src="https://localhost:8443/imagep/{{project.id}}.jpg" alt="Foto del proyecto" />
                                     <div class="flex-caption">
                                         <h3>{{project.title}}</h3>
                                         <p>{{project.shortDescription}}</p>
