--- a/WADWolframAngular/src/app/entities/singleNew.html
+++ b/WADWolframAngular/src/app/entities/singleNew.html
@@ -19,17 +19,17 @@
 						<article id="sindromeWolfram">
 							<div class="post-image">
 								<div class="post-heading">
-									<h3><a>{{new.title}}</a></h3>
+									<h3><a>{{nnew.title}}</a></h3>
 								</div>
-								<img src="/image/{{new.id}}.jpg" alt="Foto de la noticia"
+								<img src="https://localhost:8443/image/{{nnew.id}}.jpg" alt="Foto de la noticia"
 									class="img-responsive" />
 							</div>
-							{{new.body}}
+							{{nnew.body}}
 							<div class="bottom-article">
 
 								<ul class="meta-post">
-									<li><i class="fa fa-calendar"></i>{{date}}</li>
-									<li><i class="fa fa-comments"></i>{{number_comments}}
+									<li><i class="fa fa-calendar"></i>{{nnew.date}}</li>
+									<li><i class="fa fa-comments"></i>{{nnew.number_comments}}
 										Comentarios</li>
 								</ul>
 
