--- a/WADWolframAngular/src/app/entities/project.html
+++ b/WADWolframAngular/src/app/entities/project.html
@@ -5,7 +5,7 @@
          <div class="col-lg-12">
             <ul class="breadcrumb">
                <li><a [routerLink]="['/index']"><i class="fa fa-home"></i> Volver al Inicio</a><i class="icon-angle-right"></i></li>
-               <li><a href="/projects">Proyectos</a></li>
+               <li><a [routerLink]="['/projects']">Proyectos</a></li>
                <li class="active">Proyecto</li>
             </ul>
          </div>
