--- a/WADWolframAngular/src/app/component/admin/addproject/addproject.component.html
+++ b/WADWolframAngular/src/app/component/admin/addproject/addproject.component.html
@@ -8,13 +8,12 @@
 
 							</div>
 							<div class="panel-body">
-								<form class="form-horizontal" role="form" method='post'
-									action="/admin/AddProject/create" enctype="multipart/form-data">
+								<form class="form-horizontal" role="form" enctype="multipart/form-data">
 									<div class="form-group">
 										<label for="inputEmail3" class="col-sm-2 control-label">Nombre
 											del proyecto</label>
 										<div class="col-sm-10">
-											<input type="text" class="form-control" id="inputEmail3"
+											<input #title type="text" class="form-control" id="inputEmail3"
 												placeholder="Nombre" name="title">
 										</div>
 									</div>
@@ -22,7 +21,7 @@
 										<label for="inputEmail3" class="col-sm-2 control-label">Fecha
 											de lanzamiento</label>
 										<div class="col-sm-10">
-											<input type="date" class="form-control" id="inputEmail3"
+											<input #releaseDate type="date" class="form-control" id="inputEmail3"
 												placeholder="Fecha" name="releaseDate">
 										</div>
 									</div>
@@ -30,7 +29,7 @@
 										<label for="inputPassword3" class="col-sm-2 control-label">Presupuesto
 											total</label>
 										<div class="col-sm-10">
-											<input type="number" class="form-control" id="inputPassword3"
+											<input #totalBudget type="number" class="form-control" id="inputPassword3"
 												placeholder="€" name="totalBudget">
 										</div>
 									</div>
@@ -39,7 +38,7 @@
 										<label for="inputPassword3" class="col-sm-2 control-label">Presupuesto
 											concedido</label>
 										<div class="col-sm-10">
-											<input type="number" class="form-control" id="inputPassword3"
+											<input #parcialBudget type="number" class="form-control" id="inputPassword3"
 												placeholder="€" name="parcialBudget">
 										</div>
 									</div>
@@ -48,7 +47,7 @@
 										<label for="inputPassword3" class="col-sm-2 control-label">Duracion
 											del proyecto</label>
 										<div class="col-sm-10">
-											<input type="number" class="form-control" id="inputPassword3"
+											<input #time type="number" class="form-control" id="inputPassword3"
 												placeholder="Duracion en meses" name="time">
 										</div>
 									</div>
@@ -57,7 +56,7 @@
 										<label for="inputPassword3" class="col-sm-2 control-label">Año
 											previsto de finalización</label>
 										<div class="col-sm-10">
-											<input type="number" class="form-control" id="inputPassword3"
+											<input #startYear type="number" class="form-control" id="inputPassword3"
 												placeholder="Año" name="startYear">
 										</div>
 									</div>
@@ -67,7 +66,7 @@
 										<label class="col-md-2 control-label">Imagen del
 											proyecto</label>
 										<div class="col-md-10">
-											<input type="file" class="btn btn-default"
+											<input #imagen type="file" class="btn btn-default"
 												id="exampleInputFile1" name="imagen">
 											<p class="help-block"></p>
 										</div>
@@ -76,7 +75,7 @@
 										<label class="col-sm-2 control-label">Descripción
 											breve</label>
 										<div class="col-sm-10">
-											<textarea class="form-control" placeholder="Descripción"
+											<textarea #shortDescription class="form-control" placeholder="Descripción"
 												rows="2" name="shortDescription"></textarea>
 										</div>
 									</div>
@@ -84,7 +83,7 @@
 										<label class="col-sm-2 control-label">Información
 											completa</label>
 										<div class="col-sm-10">
-											<textarea class="form-control"
+											<textarea #description class="form-control"
 												placeholder="Descripción completa" rows="6"
 												name="description"></textarea>
 										</div>
@@ -93,7 +92,7 @@
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
 											<div class="checkbox">
-												<label> <input type="checkbox" name="opened"
+												<label> <input #opened type="checkbox" name="opened"
 													required> Confirmar todos los cambios
 												</label>
 											</div>
@@ -101,7 +100,9 @@
 									</div>
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
-											<button type="submit" class="btn btn-primary">Añadir
+											<button (click)="newProject(title.value,releaseDate.value, totalBudget.value,
+											 parcialBudget.value, time.value, startYear.value, imagen.value, sortDescription.value,
+											  description.value, opened.value)" type="submit" class="btn btn-primary">Añadir
 												proyecto</button>
 										</div>
 									</div>
@@ -144,15 +145,15 @@
 									</thead>
 									<tbody data-brackets-id='193'>
 										
-										<tr data-brackets-id='194' class="odd gradeX">
-											<td data-brackets-id='195'>title</td>
-											<td data-brackets-id='196'>parcialBudget</td>
-											<td data-brackets-id='197'>restBudget</td>
-											<td data-brackets-id='197'>time</td>
-											<td data-brackets-id='197'>startYear</td>
+										<tr data-brackets-id='194' class="odd gradeX" *ngFor= " let project of projects">
+											<td data-brackets-id='195'>{{project.title}}</td>
+											<td data-brackets-id='196'>{{project.parcialBudget}}</td>
+											<td data-brackets-id='197'>{{project.restBudget}}</td>
+											<td data-brackets-id='197'>{{project.time}}</td>
+											<td data-brackets-id='197'>{{project.startYear}}</td>
 											<td data-brackets-id='198'>
-												<form method="post" action="/borrarProyecto?id={{id}}">
-													<button class="btn btn-danger">
+												<form>
+													<button class="btn btn-danger" (click)= "borrarProyecto(project.id)">
 														<i class="glyphicon glyphicon-remove"></i> Borrar
 													</button>
 													<input type="hidden" name="_csrf" value="{{token}}" />
