--- a/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
+++ b/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
@@ -14,11 +14,11 @@
 							</thead>
 							<tbody data-brackets-id='193'>
 							<!--	{{#donaciones}}-->
-								<tr data-brackets-id='194' class="odd gradeX">
+								<tr data-brackets-id='194' class="odd gradeX" *ngFor="let donation of donations">
 									<td data-brackets-id='195'>project.title</td>
 									<td data-brackets-id='196'>user.userName</td>
-									<td data-brackets-id='197'>money</td>
-									<td data-brackets-id='198'>date</td>
+									<td data-brackets-id='197'>{{donation.money}}</td>
+									<td data-brackets-id='198'>{{donation.date}}</td>
 
 								</tr>
 								<!--{{/donaciones}}-->
