--- a/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
+++ b/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
@@ -15,8 +15,8 @@
 							<tbody data-brackets-id='193'>
 							<!--	{{#donaciones}}-->
 								<tr data-brackets-id='194' class="odd gradeX" *ngFor="let donation of donations">
-									<td data-brackets-id='195'>project.title</td>
-									<td data-brackets-id='196'>user.userName</td>
+									<td data-brackets-id='195'>{{donation.project.title}}</td>
+									<td data-brackets-id='196'>{{donation.user.userName}}</td>
 									<td data-brackets-id='197'>{{donation.money}}</td>
 									<td data-brackets-id='198'>{{donation.date}}</td>
 
