--- a/WADWolframAngular/src/app/component/admin/addproject/addproject.component.html
+++ b/WADWolframAngular/src/app/component/admin/addproject/addproject.component.html
@@ -101,12 +101,12 @@
 									<div class="form-group">
 										<div class="col-sm-offset-2 col-sm-10">
 											<button (click)="newProject(title.value,releaseDate.value, totalBudget.value,
-											 parcialBudget.value, time.value, startYear.value, imagen.value, sortDescription.value,
+											 parcialBudget.value, time.value, startYear.value, imagen.value, shortDescription.value,
 											  description.value, opened.value)" type="submit" class="btn btn-primary">Añadir
 												proyecto</button>
 										</div>
 									</div>
-									<input type="hidden" name="_csrf" value="{{token}}" />
+									
 								</form>
 							</div>
 						</div>
