--- a/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
+++ b/WADWolframAngular/src/app/component/admin/donationsAdmin/donationsAdmin.component.html
@@ -14,11 +14,32 @@
 							</thead>
 							<tbody data-brackets-id='193'>
 							<!--	{{#donaciones}}-->
-								<tr data-brackets-id='194' class="odd gradeX" *ngFor="let donation of donations">
-									<td data-brackets-id='195'>{{donation.project.title}}</td>
-									<td data-brackets-id='196'>{{donation.user.userName}}</td>
-									<td data-brackets-id='197'>{{donation.money}}</td>
-									<td data-brackets-id='198'>{{donation.date}}</td>
+								<tr data-brackets-id='194' class="odd gradeX">
+									<td data-brackets-id='195'>Titulo</td>
+									<td data-brackets-id='196'>e</td>
+									<td data-brackets-id='197'>50.0</td>
+									<td data-brackets-id='198'>2017-05-08 01:33:44.0</td>
+
+								</tr>
+								<tr data-brackets-id='194' class="odd gradeX">
+									<td data-brackets-id='195'>Titulo</td>
+									<td data-brackets-id='196'>e</td>
+									<td data-brackets-id='197'>60.0</td>
+									<td data-brackets-id='198'>2017-05-08 01:33:44.0</td>
+
+								</tr>
+								<tr data-brackets-id='194' class="odd gradeX">
+									<td data-brackets-id='195'>Titulo</td>
+									<td data-brackets-id='196'>e</td>
+									<td data-brackets-id='197'>40.0</td>
+									<td data-brackets-id='198'>2017-05-08 01:33:44.0</td>
+
+								</tr>
+								<tr data-brackets-id='194' class="odd gradeX">
+									<td data-brackets-id='195'>Titulo2</td>
+									<td data-brackets-id='196'>e</td>
+									<td data-brackets-id='197'>10.0</td>
+									<td data-brackets-id='198'>2017-05-08 01:33:44.0</td>
 
 								</tr>
 								<!--{{/donaciones}}-->
